# roam

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
bark-core/: Cargo.toml
bark-core/src/: lib.rs
bark-core/src/io/: lib.rs  mod.rs
bark-frontend/: Cargo.toml
bark-frontend/src/: frontend.rs  glyph.rs  lib.rs  main.rs
bark-frontend/src/shader/: text.fs
bark-frontend/src/text/: lipsum.txt
src/: main.rs
