[package]
name = "bark"
version = "0.1.0"
authors = ["jcbcn <jcbcn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bark-frontend = { path = "bark-frontend" }

[workspace]
members = [
    "bark-frontend"
]