[package]
name = "bark-frontend"
version = "0.1.0"
authors = ["jcbcn <jcbcn@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.26.0"
winit = "0.24.0"
takeable-option = "0.4"

[build-dependencies]
gl_generator = "0.14"
