[package]
name = "bark-frontend"
version = "0.1.0"
authors = ["jcbcn <jcbcn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bark-core = { path = "../bark-core" }
glutin = "0.26.0"
winit = "0.24.0"
glyph_brush = "0.7.2"
gl = "0.14"
env_logger = { version = "0.8", default-features = false }
spin_sleep = "1"